@@ -15,8 +15,7 @@
  */
 package cachemesh.common.config.types;
 
-import java.util.Collections;
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 import cachemesh.common.config.ConfigContext;
 import cachemesh.common.config.suppport.AbstractType;
@@ -25,8 +24,7 @@ public class IntegerType extends AbstractType<Integer> {
 
     public static final IntegerType DEFAULT = new IntegerType();
 
-    public static final Iterable<Class<?>> CONVERTABLES = Collections
-            .unmodifiableCollection(List.of(Character.class, Number.class, String.class));
+    public static final Iterable<Class<?>> CONVERTABLES = ImmutableList.of(Character.class, Number.class, String.class);
 
     @Override
     public Class<?> getKlass() {
